--- a/guneshukuk.WebUIv2/Views/_ViewImports.cshtml
+++ b/guneshukuk.WebUIv2/Views/_ViewImports.cshtml
@@ -2,6 +2,8 @@
 @using guneshukuk.WebUIv2.Models.Dtos.AboutDtos
 @using guneshukuk.WebUIv2.Models.Dtos.ArticleDtos
 @using guneshukuk.WebUIv2.Models.Dtos.BookingDtos
+@using guneshukuk.WebUIv2.Models.Dtos.ConsultancyDtos
+@using guneshukuk.WebUIv2.Models.Dtos.ContactDtos
 @using guneshukuk.WebUIv2.Areas.Admin.Models.Dtos.Identity
 
 
