--- a/guneshukuk.WebUIv2/wwwroot/TitanTheme/live/assets/scss/_blogpost.scss
+++ b/guneshukuk.WebUIv2/wwwroot/TitanTheme/live/assets/scss/_blogpost.scss
@@ -82,7 +82,7 @@
 .pagination a {
 	border: 1px solid #eaeaea;
 	display: inline-block;
-	text-transform: uppercase;
+	 : uppercase;
 	text-align: center;
 	color: #999;
 	padding: 4px 12px;
