--- a/guneshukuk.WebUIv2/wwwroot/TitanTheme/live/assets/scss/_button.scss
+++ b/guneshukuk.WebUIv2/wwwroot/TitanTheme/live/assets/scss/_button.scss
@@ -1,7 +1,7 @@
 .btn {
 	border-radius: 0;
 	font-family: "Roboto Condensed", sans-serif;
-	text-transform: uppercase;
+	 : uppercase;
 	letter-spacing: 2px;
 	font-size: 11px;
 	padding: 8px 37px;
