--- a/guneshukuk.WebUIv2/wwwroot/TitanTheme/live/assets/scss/_navbar.scss
+++ b/guneshukuk.WebUIv2/wwwroot/TitanTheme/live/assets/scss/_navbar.scss
@@ -4,7 +4,7 @@
 	border-radius: 0;
 	z-index: 1000;
 	font-family: "Roboto Condensed", sans-serif;
-	text-transform: uppercase;
+	 : uppercase;
 	letter-spacing: 3px;
 	font-size: 11px;
 	-webkit-transition: background, padding 0.4s ease-in-out 0s;
@@ -114,7 +114,7 @@
 	-webkit-border-radius: 0;
 	-moz-border-radius: 0;
 	border-radius: 0;
-	text-transform: uppercase;
+	 : uppercase;
 	letter-spacing: 2px;
 	font-size: 11px;
 }
