--- a/guneshukuk.WebUIv2/wwwroot/TitanTheme/live/assets/scss/_services_and_features.scss
+++ b/guneshukuk.WebUIv2/wwwroot/TitanTheme/live/assets/scss/_services_and_features.scss
@@ -12,7 +12,7 @@
 
 .features-title,
 .alt-features-title {
-	text-transform: uppercase;
+	 : uppercase;
 	letter-spacing: 2px;
 	font-weight: 400;
 	font-size: 14px;
