--- a/guneshukuk.WebUIv2/wwwroot/TitanTheme/live/assets/scss/_slider.scss
+++ b/guneshukuk.WebUIv2/wwwroot/TitanTheme/live/assets/scss/_slider.scss
@@ -151,7 +151,7 @@ Photography Page Slider
 
 		.caption-text {
 			font-size: 24px;
-			text-transform: capitalize;
+			 : capitalize;
 			letter-spacing: 1px;
 		}
 	}
