--- a/guneshukuk.WebUIv2/wwwroot/TitanTheme/live/assets/scss/_typography.scss
+++ b/guneshukuk.WebUIv2/wwwroot/TitanTheme/live/assets/scss/_typography.scss
@@ -34,7 +34,7 @@ blockquote {
 
 .font-alt {
 	font-family: "Roboto Condensed", sans-serif;
-	text-transform: uppercase;
+	 : uppercase;
 	letter-spacing: 2px;
 }
 
