--- a/guneshukuk.WebUIv2/wwwroot/TitanTheme/live/assets/lib/flexslider/flexslider.css
+++ b/guneshukuk.WebUIv2/wwwroot/TitanTheme/live/assets/lib/flexslider/flexslider.css
@@ -35,7 +35,7 @@
   list-style: none;
 }
 .flex-pauseplay span {
-  text-transform: capitalize;
+   : capitalize;
 }
 /* ====================================================================================================================
  * BASE STYLES
