--- a/guneshukuk.WebUIv2/wwwroot/TitanTheme/live/assets/lib/owl.carousel/docs_src/assets/scss/_settings.scss
+++ b/guneshukuk.WebUIv2/wwwroot/TitanTheme/live/assets/lib/owl.carousel/docs_src/assets/scss/_settings.scss
@@ -683,7 +683,7 @@ $anchor-font-color: #1ccacd;
 // Off Canvas Menu List Variables
 // $off-canvas-label-padding: 0.3rem rem-calc(15);
 // $off-canvas-label-color: #999;
-// $off-canvas-label-text-transform: uppercase;
+// $off-canvas-label- : uppercase;
 // $off-canvas-label-font-weight: bold;
 // $off-canvas-label-bg: #444;
 // $off-canvas-label-border-top: 1px solid scale-color(#444, $lightness: 14%);
@@ -1201,14 +1201,14 @@ $side-nav-font-size: rem-calc(16);
 // $topbar-link-bg-active: $primary-color;
 // $topbar-link-bg-active-hover: scale-color($primary-color, $lightness: -14%);
 // $topbar-link-font-family: $body-font-family;
-// $topbar-link-text-transform: none;
+// $topbar-link- : none;
 // $topbar-link-padding: $topbar-height / 3;
 
 // $topbar-button-font-size: 0.75rem;
 // $topbar-button-top: 7px;
 
 // $topbar-dropdown-label-color: #777;
-// $topbar-dropdown-label-text-transform: uppercase;
+// $topbar-dropdown-label- : uppercase;
 // $topbar-dropdown-label-font-weight: bold;
 // $topbar-dropdown-label-font-size: rem-calc(10);
 // $topbar-dropdown-label-bg: #333;
