--- a/guneshukuk.WebUIv2/wwwroot/TitanTheme/live/assets/lib/owl.carousel/docs_src/assets/scss/docs.scss
+++ b/guneshukuk.WebUIv2/wwwroot/TitanTheme/live/assets/lib/owl.carousel/docs_src/assets/scss/docs.scss
@@ -31,7 +31,7 @@
 			}
 		}
 		li.side-nav-head{
-			text-transform: uppercase;
+			 : uppercase;
 			color: #000;
 			font-size: 1rem;
 			font-weight: bold;
