--- a/guneshukuk.WebUIv2/Views/About/Index.cshtml
+++ b/guneshukuk.WebUIv2/Views/About/Index.cshtml
@@ -5,23 +5,27 @@
 }
 
 <section class="home-section home-full-height bg-dark-30" id="home" data-background="/TitanTheme/live/assets/images/background.jpg">
-    @foreach(var item in Model)
+    @if(Model!=null)
     {
-        <div class="module bg-dark-60 about-page-header" data-background="@item.ImageUrl">
-            <div class="container">
-                <div class="row">
-                    <div class="col-sm-6 col-sm-offset-1">
-                        <h2 class="module-title font-alt">@item.Title</h2>
-                        <div class="module-subtitle font-serif">@item.Description</div>
+        @foreach (var item in Model)
+        {
+            <div class="module bg-dark-60 about-page-header" data-background="@item.ImageUrl">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-sm-6 col-sm-offset-1">
+                            <h2 class="module-title font-alt">@item.Title</h2>
+                            <div class="module-subtitle font-serif">@item.Description</div>
+                        </div>
                     </div>
                 </div>
             </div>
-            </div>
-        
-       
-       
 
+
+
+
+        }
     }
     
     
-</div>
+    
+</section>
