--- a/guneshukuk.WebUIv2/Areas/Admin/Views/BookingDate/GetBookingDates.cshtml
+++ b/guneshukuk.WebUIv2/Areas/Admin/Views/BookingDate/GetBookingDates.cshtml
@@ -3,41 +3,38 @@
 @{
     ViewData["Title"] = "GetBookingDates";
     Layout = "~/Areas/Admin/Views/AdminLayout/Index.cshtml";
-}
-@Html.ListBoxFor(m => m.AvailableDates, new SelectList(Model.AvailableDates), new { @id = "listbox",@class = "form-control",@hidden="true" })
-
-<input id="datepicker"  />
-<script>
-   
-    const allowedDates = [
-
-    ];
-    const dateListBox = document.getElementById("listbox");
-
-    // Tüm listbox seçeneklerini almak için bir döngü
-    for (let i = 0; i < dateListBox.options.length; i++) {
-        // Seçeneğin değerini alıp allowedDates dizisine ekleyin
-        allowedDates.push(dateListBox.options[i].value);
-    }
     
-    const picker = new easepick.create({
-        element: document.getElementById('datepicker'),
-        css: [
-            'https://cdn.jsdelivr.net/npm/@@easepick/bundle@1.2.1/dist/index.css',
-        ],
-        plugins: ['LockPlugin'],
-        LockPlugin: {
-            filter(date, picked) {
-                return allowedDates.includes(date.format('YYYY-MM-DD'));
-            },
-        },
-        lang:'tr-TR',
-        autoApply: false,
-        locale: {
-            cancel:'İptal',
-            apply:'Seç',
-        }
-    });
-    console.log(allowedDates.format('YYYY-MM-DD')
-</script>
+    var dateStrings = Model.Dates.Select(d => d.ToString("yyyy-MM-dd")).ToList();
+    ViewData["BookingDate"] = Newtonsoft.Json.JsonConvert.SerializeObject(dateStrings);
+}
+@using (Html.BeginForm())
+{
+    <input type="text" id="datepicker" name="bookingDates" readonly />
+    <input type="submit" value="Randevu Oluştur" />
+}
+
+
+ @section Scripts {
+    <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/json2/20160511/json2.min.js"></script>
+    <script>
+        $(function () {
+            var bookingDates = @Html.Raw(ViewData["BookingDate"]);
+
+           
+
+            $("#datepicker").datepicker({
+                dateFormat: 'yy-mm-dd',
+                beforeShowDay: function (date) {
+                    var stringDate = $.datepicker.formatDate('yy-mm-dd', date);
+                    var isAvailable = bookingDates.includes(stringDate);
+                    return [isAvailable, "", isAvailable ? "Available" : "Unavailable"];
+                }
+            });
+        });
+    </script>
+    }
+>
 
