--- a/guneshukuk.WebUIv2/Views/Article/Index.cshtml
+++ b/guneshukuk.WebUIv2/Views/Article/Index.cshtml
@@ -6,21 +6,25 @@
 
 
 <section class="home-section home-full-height bg-dark-30" id="home" data-background="/TitanTheme/live/assets/images/background.jpg">
-    @foreach (var item in Model)
+    @if(Model!=null)
     {
-        <section class="module">
-            <div class="container">
-                <div class="row">
-                    <div class="content-box">
-                        <h3 class="content-box-title font-serif">@item.ArticleTitle</h3>
-                        <div class="content-box-image"><img src="@item.ArticleImageUrl" /></div>
-                        <p class="content-box"> @item.ArticleContent</p>
+        @foreach (var item in Model)
+        {
+            <section class="module">
+                <div class="container">
+                    <div class="row">
+                        <div class="content-box">
+                            <h3 class="content-box-title font-serif">@item.ArticleTitle</h3>
+                            <div class="content-box-image"><img src="@item.ArticleImageUrl" /></div>
+                            <p class="content-box"> @item.ArticleContent</p>
 
+                        </div>
                     </div>
                 </div>
-            </div>
-        </section>
+            </section>
+        }
     }
+
 </section>
 
 
