--- a/guneshukuk.WebUIv2/Areas/Admin/Views/BookingDate/GetBookingDates.cshtml
+++ b/guneshukuk.WebUIv2/Areas/Admin/Views/BookingDate/GetBookingDates.cshtml
@@ -1,5 +1,8 @@
 ﻿@using guneshukuk.WebUIv2.Areas.Admin.Models.Dtos.BookingDateDtos
 @model ResultBookingDateDto
+@using System.Text.Json
+@using Newtonsoft.Json
+@using System.Linq
 @{
     ViewData["Title"] = "GetBookingDates";
     Layout = "~/Areas/Admin/Views/AdminLayout/Index.cshtml";
