--- a/guneshukuk.WebUIv2/Views/Layout/Index.cshtml
+++ b/guneshukuk.WebUIv2/Views/Layout/Index.cshtml
@@ -21,6 +21,6 @@
        
     </main>
     @await Component.InvokeAsync("_LayoutScriptComponentPartial")
-  
+    @RenderSection("Scripts", required: false)
 </body>
 </html>
