--- a/guneshukuk.WebUIv2/Views/Booking/Index.cshtml
+++ b/guneshukuk.WebUIv2/Views/Booking/Index.cshtml
@@ -1,7 +1,11 @@
-﻿@model CreateBookingDto
+﻿
+@model ListBookingDateDto
+
 @{
     ViewData["Title"] = "Index";
     Layout = "~/Views/Layout/Index.cshtml";
+    var dateStrings = Model.ResultBookingDateDto.Dates.Select(d => d.ToString("dd-MM-yyyy")).ToList();
+    ViewData["AvailableDates"] = Newtonsoft.Json.JsonConvert.SerializeObject(dateStrings);
 }
 
 
@@ -17,26 +21,26 @@
                     <form id="contactForm" role="form" method="post">
                         <div class="form-group">
                             <label class="sr-only" for="BookingName">ADINIZ SOYADINIZ</label>
-                            <input class="form-control" type="text" id="name" name="BookingName" placeholder="ADINIZ SOYADINIZ" required="required" data-validation-required-message="Please enter your name." asp-for=BookingName />
+                            <input class="form-control" type="text" id="name" name="BookingName" placeholder="ADINIZ SOYADINIZ" required="required" data-validation-required-message="Please enter your name." asp-for="CreateBookingDto.BookingName" />
                             <p class="help-block text-danger"></p>
                         </div>
                         <div class="form-group">
                             <label class="sr-only" for="email">E-POSTA ADRESİNİZ</label>
-                            <input class="form-control" type="email" id="BookingEmail" name="BookingEmail" placeholder="E-POSTA ADRESİNİZ*" required="required" data-validation-required-message="Please enter your email address." asp-for="BookingEmail" />
+                            <input class="form-control" type="email" id="BookingEmail" name="BookingEmail" placeholder="E-POSTA ADRESİNİZ*" required="required" data-validation-required-message="Please enter your email address." asp-for="CreateBookingDto.BookingEmail" />
                             <p class="help-block text-danger"></p>
                         </div>
                         <div class="form-group">
                             <label class="sr-only" for="phone">TELEFON NUMARANIZ</label>
-                            <input class="form-control" type="tel" id="BookingPhone" name="BookingPhone" placeholder="TELEFON NUMARANIZ*" required="required" data-validation-required-message="Please enter your telephone number." asp-for="BookingPhone" />
+                            <input class="form-control" type="tel" id="BookingPhone" name="BookingPhone" placeholder="TELEFON NUMARANIZ*" required="required" data-validation-required-message="Please enter your telephone number." asp-for="CreateBookingDto.BookingPhone" />
                             <p class="help-block text-danger"></p>
                         </div>
                         <div class="form-group">
-                            <textarea class="form-control" rows="7" id="BookingMessage" name="BookingMessage" placeholder="Your Message*" required="required" data-validation-required-message="Please enter your message." asp-for="BookingMessage"></textarea>
+                            <textarea class="form-control" rows="7" id="BookingMessage" name="BookingMessage" placeholder="Your Message*" required="required" data-validation-required-message="Please enter your message." asp-for="CreateBookingDto.BookingMessage"></textarea>
                             <p class="help-block text-danger"></p>
                         </div>
                         <div class="form-group">
-                            <div class='input-group date' id='datetimepicker1'>
-                                <input type='text' class="form-control" asp-for="BookingDate" />
+                            <div class='input-group date' id='datetimepicker' >
+                                <input type='text' class="form-control" id="datepicker" name="datepicker" asp-for="CreateBookingDto.BookingDate" />
                                 <span class="input-group-addon">
                                     <span class="glyphicon glyphicon-calendar"></span>
                                 </span>
@@ -54,6 +58,29 @@
 
     </div>
 </section>
+
+@section Scripts {
+    <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/json2/20160511/json2.min.js"></script>
+    <script>
+        $(function () {
+            var availableDates = @Html.Raw(ViewData["AvailableDates"]);
+
+
+
+            $("#datepicker").datepicker({
+                dateFormat: 'dd-mm-yy',
+                beforeShowDay: function (date) {
+                    var stringDate = $.datepicker.formatDate('dd-mm-yy', date);
+                    var isAvailable = availableDates.includes(stringDate);
+                    return [isAvailable, "", isAvailable ? "Available" : "Unavailable"];
+                }
+            });
+        });
+    </script>
+}
 
 
 
