--- a/guneshukuk.WebUIv2/Views/Booking/Index.cshtml
+++ b/guneshukuk.WebUIv2/Views/Booking/Index.cshtml
@@ -72,5 +72,13 @@
                 }
             });
         });
+
+        $("#datepicker").change(function () {
+            var selectedDate = $(this).val();
+            var bookingDate = selectedDate;
+            $("#CreateBookingDto.BookingDate").val(bookingDate);
+            console.log(bookingDate)
+        });
+               
     </script>
 }
