--- a/guneshukuk.WebUIv2/Views/Booking/Index.cshtml
+++ b/guneshukuk.WebUIv2/Views/Booking/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@model ListBookingDateDto
+﻿@using Newtonsoft.Json
+@model ListBookingDateDto
 
 @{
     ViewData["Title"] = "Index";
@@ -13,27 +14,29 @@
                     <h4 class="font-alt">RANDEVU BİLGİLERİNİ GİRİNİZ</h4><br />
                     <form id="contactForm" role="form" method="post" asp-action="Index" asp-controller="Booking">
                         <div class="form-group">
-                            <label class="sr-only" for="BookingName">ADINIZ SOYADINIZ</label>
-                            <input class="form-control" type="text" id="name" name="CreateBookingDto.BookingName" placeholder="ADINIZ SOYADINIZ" required="required" data-validation-required-message="Please enter your name." asp-for="CreateBookingDto.BookingName" />
+                            <label class="sr-only" for="CreateBookingDto.BookingName">ADINIZ SOYADINIZ</label>
+                            <input class="form-control" type="text" id="CreateBookingDto.BookingName" name="CreateBookingDto.BookingName" placeholder="ADINIZ SOYADINIZ" required="required" asp-for="CreateBookingDto.BookingName" />
                             <p class="help-block text-danger"></p>
                         </div>
                         <div class="form-group">
-                            <label class="sr-only" for="email">E-POSTA ADRESİNİZ</label>
-                            <input class="form-control" type="email" id="BookingEmail" name="CreateBookingDto.BookingEmail" placeholder="E-POSTA ADRESİNİZ*" required="required" data-validation-required-message="Please enter your email address." asp-for="CreateBookingDto.BookingEmail" />
+                            <label class="sr-only" for="CreateBookingDto.BookingEmail">E-POSTA ADRESİNİZ</label>
+                            <input class="form-control" type="email" id="CreateBookingDto.BookingEmail" name="CreateBookingDto.BookingEmail" placeholder="E-POSTA ADRESİNİZ*" required="required" asp-for="CreateBookingDto.BookingEmail" />
                             <p class="help-block text-danger"></p>
                         </div>
                         <div class="form-group">
-                            <label class="sr-only" for="phone">TELEFON NUMARANIZ</label>
-                            <input class="form-control" type="tel" id="BookingPhone" name="CreateBookingDto.BookingPhone" placeholder="TELEFON NUMARANIZ*" required="required" data-validation-required-message="Please enter your telephone number." asp-for="CreateBookingDto.BookingPhone" />
+                            <label class="sr-only" for="CreateBookingDto.BookingPhone">TELEFON NUMARANIZ</label>
+                            <input class="form-control" type="tel" id="CreateBookingDto.BookingPhone" name="CreateBookingDto.BookingPhone" placeholder="TELEFON NUMARANIZ*" required="required" asp-for="CreateBookingDto.BookingPhone" />
                             <p class="help-block text-danger"></p>
                         </div>
                         <div class="form-group">
-                            <textarea class="form-control" rows="7" id="BookingMessage" name="CreateBookingDto.BookingMessage" placeholder="Your Message*" required="required" data-validation-required-message="Please enter your message." asp-for="CreateBookingDto.BookingMessage"></textarea>
+                            <textarea class="form-control" rows="7" id="CreateBookingDto.BookingMessage" name="CreateBookingDto.BookingMessage" placeholder="Your Message*" required="required" asp-for="CreateBookingDto.BookingMessage"></textarea>
                             <p class="help-block text-danger"></p>
                         </div>
                         <div class="form-group">
+                            <label class="sr-only" for="CreateBookingDto.BookingDateId">RANDEVU TARİHİ</label>
+                            <input type="hidden" id="CreateBookingDto_BookingDateId" name="CreateBookingDto.BookingDateId" asp-for="CreateBookingDto.BookingDate" />
                             <div class='input-group date' id='datetimepicker'>
-                                <input type='text' class="form-control" id="datepicker" name="datepicker" asp-for="CreateBookingDto.BookingDate" />
+                                <input type='text' class="form-control" id="datepicker" name="CreateBookingDto.BookingDate" asp-for="CreateBookingDto.BookingDate" />
                                 <span class="input-group-addon">
                                     <span class="glyphicon glyphicon-calendar"></span>
                                 </span>
@@ -50,7 +53,7 @@
 </section>
 
 @{
-    var dateStrings = Model.ResultBookingDateDto.Dates.Select(d => d.ToString("dd-MM-yyyy")).ToList();
+    var dateStrings = Model.ResultBookingDateDto.Dates.Select(d => d.ToString("yyyy-MM-dd")).ToList();
     ViewData["AvailableDates"] = Newtonsoft.Json.JsonConvert.SerializeObject(dateStrings);
 }
 
@@ -64,21 +67,19 @@
             var availableDates = @Html.Raw(ViewData["AvailableDates"]);
 
             $("#datepicker").datepicker({
-                dateFormat: 'dd-mm-yy',
+                dateFormat: 'yy-mm-dd',
                 beforeShowDay: function (date) {
-                    var stringDate = $.datepicker.formatDate('dd-mm-yy', date);
-                    var isAvailable = availableDates.includes(stringDate);
-                    return [isAvailable, "", isAvailable ? "Available" : "Unavailable"];
+                    var stringDate = $.datepicker.formatDate('yy-mm-dd', date);
+                    return [availableDates.includes(stringDate), "", availableDates.includes(stringDate) ? "Available" : "Unavailable"];
                 }
             });
-        });
 
-        $("#datepicker").change(function () {
-            var selectedDate = $(this).val();
-            var bookingDate = selectedDate;
-            $("#CreateBookingDto.BookingDate").val(bookingDate);
-            console.log(bookingDate)
+            $("#datepicker").change(function () {
+                var selectedDate = $(this).val();
+                var bookingDateId = @Html.Raw(JsonConvert.SerializeObject(Model.ResultBookingDateDto.Dates))
+                                                .find(d => d === selectedDate) || '';
+                $("#CreateBookingDto_BookingDateId").val(bookingDateId);
+            });
         });
-               
     </script>
 }
