--- a/guneshukuk.WebUIv2/Views/Booking/Index.cshtml
+++ b/guneshukuk.WebUIv2/Views/Booking/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@using Newtonsoft.Json
-@model ListBookingDateDto
+@model CreateBookingViewModel
 
 @{
     ViewData["Title"] = "Index";
@@ -15,28 +15,28 @@
                     <form id="contactForm" role="form" method="post" asp-action="Index" asp-controller="Booking">
                         <div class="form-group">
                             <label class="sr-only" for="CreateBookingDto.BookingName">ADINIZ SOYADINIZ</label>
-                            <input class="form-control" type="text" id="CreateBookingDto.BookingName" name="CreateBookingDto.BookingName" placeholder="ADINIZ SOYADINIZ" required="required" asp-for="CreateBookingDto.BookingName" />
+                            <input class="form-control" type="text" id="CreateBookingDto.BookingName" name="BookingName" placeholder="ADINIZ SOYADINIZ" required="required" asp-for="BookingName" />
                             <p class="help-block text-danger"></p>
                         </div>
                         <div class="form-group">
                             <label class="sr-only" for="CreateBookingDto.BookingEmail">E-POSTA ADRESİNİZ</label>
-                            <input class="form-control" type="email" id="CreateBookingDto.BookingEmail" name="CreateBookingDto.BookingEmail" placeholder="E-POSTA ADRESİNİZ*" required="required" asp-for="CreateBookingDto.BookingEmail" />
+                            <input class="form-control" type="email" id="CreateBookingDto.BookingEmail" name="BookingEmail" placeholder="E-POSTA ADRESİNİZ*" required="required" asp-for="BookingEmail" />
                             <p class="help-block text-danger"></p>
                         </div>
                         <div class="form-group">
                             <label class="sr-only" for="CreateBookingDto.BookingPhone">TELEFON NUMARANIZ</label>
-                            <input class="form-control" type="tel" id="CreateBookingDto.BookingPhone" name="CreateBookingDto.BookingPhone" placeholder="TELEFON NUMARANIZ*" required="required" asp-for="CreateBookingDto.BookingPhone" />
+                            <input class="form-control" type="tel" id="CreateBookingDto.BookingPhone" name="BookingPhone" placeholder="TELEFON NUMARANIZ*" required="required" asp-for="BookingPhone" />
                             <p class="help-block text-danger"></p>
                         </div>
                         <div class="form-group">
-                            <textarea class="form-control" rows="7" id="CreateBookingDto.BookingMessage" name="CreateBookingDto.BookingMessage" placeholder="Your Message*" required="required" asp-for="CreateBookingDto.BookingMessage"></textarea>
+                            <textarea class="form-control" rows="7" id="BookingMessage" name="BookingMessage" placeholder="Your Message*" required="required" asp-for="BookingMessage"></textarea>
                             <p class="help-block text-danger"></p>
                         </div>
                         <div class="form-group">
-                            <label class="sr-only" for="CreateBookingDto.BookingDateId">RANDEVU TARİHİ</label>
-                            <input type="hidden" id="CreateBookingDto_BookingDateId" name="CreateBookingDto.BookingDateId" asp-for="CreateBookingDto.BookingDate" />
+                            <label class="sr-only" >RANDEVU TARİHİ</label>
+                            
                             <div class='input-group date' id='datetimepicker'>
-                                <input type='text' class="form-control" id="datepicker" name="CreateBookingDto.BookingDate" asp-for="CreateBookingDto.BookingDate" />
+                                <input type='text' class="form-control" id="datepicker"  />
                                 <span class="input-group-addon">
                                     <span class="glyphicon glyphicon-calendar"></span>
                                 </span>
@@ -52,33 +52,25 @@
     </div>
 </section>
 
-@{
-    var dateStrings = Model.ResultBookingDateDto.Dates.Select(d => d.ToString("yyyy-MM-dd")).ToList();
-    ViewData["AvailableDates"] = Newtonsoft.Json.JsonConvert.SerializeObject(dateStrings);
-}
 
 @section Scripts {
     <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/json2/20160511/json2.min.js"></script>
-    <script>
+    <script type="text/javascript">
         $(function () {
-            var availableDates = @Html.Raw(ViewData["AvailableDates"]);
+            var availableDates = @Html.Raw(Json.Serialize(Model.ResultBookingDate.BookingDates.Select(d => d.Date.ToString("yyyy-MM-dd"))));
 
             $("#datepicker").datepicker({
-                dateFormat: 'yy-mm-dd',
+                dateFormat: 'yy-mm-dd', // DateOnly ile uyumlu format
                 beforeShowDay: function (date) {
-                    var stringDate = $.datepicker.formatDate('yy-mm-dd', date);
-                    return [availableDates.includes(stringDate), "", availableDates.includes(stringDate) ? "Available" : "Unavailable"];
+                    var string = jQuery.datepicker.formatDate('yy-mm-dd', date);
+                    return [availableDates.includes(string)];
+                },
+                onSelect: function (dateText) {
+                    $("#selectedDate").val(dateText); // Seçilen tarihi gizli input'a ata
                 }
-            });
-
-            $("#datepicker").change(function () {
-                var selectedDate = $(this).val();
-                var bookingDateId = @Html.Raw(JsonConvert.SerializeObject(Model.ResultBookingDateDto.Dates))
-                                                .find(d => d === selectedDate) || '';
-                $("#CreateBookingDto_BookingDateId").val(bookingDateId);
             });
         });
     </script>
