--- a/guneshukuk.WebUIv2/Views/Booking/Index.cshtml
+++ b/guneshukuk.WebUIv2/Views/Booking/Index.cshtml
@@ -35,8 +35,9 @@
                         <div class="form-group">
                             <label class="sr-only" >RANDEVU TARİHİ</label>
                             
-                            <div class='input-group date' id='datetimepicker'>
+                            <div class='input-group date' id='datetpicker'>
                                 <input type='text' class="form-control" id="datepicker"  />
+                                <input typeof="hidden" id="selectedDate" name="selectedDate" />
                                 <span class="input-group-addon">
                                     <span class="glyphicon glyphicon-calendar"></span>
                                 </span>
