--- a/guneshukuk.WebUIv2/Views/Shared/Components/_LayoutHeaderComponentPartial/Default.cshtml
+++ b/guneshukuk.WebUIv2/Views/Shared/Components/_LayoutHeaderComponentPartial/Default.cshtml
@@ -22,5 +22,20 @@
 
     <title>AVUKAT SERMİN GÜNEŞ KEÇECİ</title>
 
+    <!-- THEME CSS
+    ================================================== -->
+    <!-- Bootstrap -->
+    <link rel="stylesheet" href="/blog/plugins/bootstrap/css/bootstrap.min.css">
+    <!-- Themify -->
+    <link rel="stylesheet" href="/blog/plugins/themify/css/themify-icons.css">
+    <link rel="stylesheet" href="/blog/plugins/slick-carousel/slick-theme.css">
+    <link rel="stylesheet" href="/blog/plugins/slick-carousel/slick.css">
+    <!-- Slick Carousel -->
+    <link rel="stylesheet" href="/blog/plugins/owl-carousel/owl.carousel.min.css">
+    <link rel="stylesheet" href="/blog/plugins/owl-carousel/owl.theme.default.min.css">
+    <link rel="stylesheet" href="/blog/plugins/magnific-popup/magnific-popup.css">
+    <!-- manin stylesheet -->
+    <link rel="stylesheet" href="/blog/css/style.css">
+
 
 </head>
