--- a/guneshukuk.WebUIv2/Views/Shared/Components/_LayoutScriptComponentPartial/Default.cshtml
+++ b/guneshukuk.WebUIv2/Views/Shared/Components/_LayoutScriptComponentPartial/Default.cshtml
@@ -11,6 +11,21 @@
 <script src="/View/js/bootstrap.min.js"></script>
 <script src="/View/js/jquery.sticky.js"></script>
 <script src="/View/js/main.js"></script>
+<!-- THEME JAVASCRIPT FILES
+================================================== -->
+<!-- initialize jQuery Library -->
+<script src="/blog/plugins/jquery/jquery.js"></script>
+<!-- Bootstrap jQuery -->
+<script src="/blog/plugins/bootstrap/js/bootstrap.min.js"></script>
+<script src="/blog/plugins/bootstrap/js/popper.min.js"></script>
+<!-- Owl caeousel -->
+<script src="/blog/plugins/owl-carousel/owl.carousel.min.js"></script>
+<script src="/blog/plugins/slick-carousel/slick.min.js"></script>
+<script src="/blog/plugins/magnific-popup/magnific-popup.js"></script>
+
+
+<!-- main js -->
+<script src="/blog/js/custom.js"></script>
 
 
 
