--- a/guneshukuk.WebUIv2/Views/Shared/Components/_LayoutFooterComponentPartial/Default.cshtml
+++ b/guneshukuk.WebUIv2/Views/Shared/Components/_LayoutFooterComponentPartial/Default.cshtml
@@ -1,12 +1,11 @@
 ﻿@*FOOTER*@
 
 
-    <footer class="footer bg-dark">
   
-        <div class="container">
+        <div class="footer">
             <div class="row">
-                <div class="col-sm-6">
-                    <p class="copyright font-alt">&copy; 2024&nbsp;<a href="/Home/Index">Avukat Sermin Güneş Keçeci</a>, Tüm Hakları Saklıdır</p>
+                <div class="col-sm-6" style="-webkit-text-fill-color:white">
+                    <p class="copyright font-alt">&copy; 2024&nbsp;<a style="-webkit-text-fill-color:white" href="/Home/Index">Avukat Sermin Güneş Keçeci</a>, Tüm Hakları Saklıdır</p>
                 </div>
                 <div class="col-sm-6">
                     <div class="footer-social-links">
@@ -15,5 +14,12 @@
                 </div>
             </div>
         </div>
-    </footer>
+  <style>
+    .footer {
+        background-color: #343a40;
+        color: white;
+        padding: 10px 0;        
+        owerflow:hidden;     
+    }
 
+  </style>
