--- a/guneshukuk.WebUIv2/wwwroot/View/css/style.css
+++ b/guneshukuk.WebUIv2/wwwroot/View/css/style.css
@@ -1,8 +1,15 @@
+html, body {
+    height: 100%;
+    margin: 0;
+    padding: 0;
+    font-family: "Open Sans", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+}
 body {
-  font-family: "Open Sans", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-  background-color: #fff;
-  height: 100vh;
-  position: relative; }
+    background-image: url('/View/images/hero_1.jpg');
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+}
   body:before {
     content: "";
     position: absolute;
@@ -37,11 +44,12 @@ a {
     text-decoration: none !important; }
 
 .hero {
-  height: 100vh;
+  height: 100%;
   width: 100%;
   background-size: cover;
   background-position: center center;
-  background-repeat: no-repeat; }
+  z-index:-1;
+  }
 
 .site-navbar {
   margin-bottom: 0px;
