--- a/guneshukuk.WebUIv2/Views/Shared/Components/_LayoutFooterComponentPartial/Default.cshtml
+++ b/guneshukuk.WebUIv2/Views/Shared/Components/_LayoutFooterComponentPartial/Default.cshtml
@@ -3,23 +3,21 @@
 
   
         <div class="footer">
-            <div class="row">
-                <div class="col-sm-6" style="-webkit-text-fill-color:white">
-                    <p class="copyright font-alt">&copy; 2024&nbsp;<a style="-webkit-text-fill-color:white" href="/Home/Index">Avukat Sermin Güneş Keçeci</a>, Tüm Hakları Saklıdır</p>
-                </div>
-                <div class="col-sm-6">
-                    <div class="footer-social-links">
-                        <a href="https://www.facebook.com/profile.php?id=100014878218520"><i class="fa fa-facebook"></i></a><a href=""><i class="fa fa-twitter"></i></a><a href="#"><i class="fa fa-dribbble"></i></a><a href="#"><i class="fa fa-skype"></i></a>
-                    </div>
-                </div>
-            </div>
+
+    <p class="copyright font-alt" style="-webkit-text-fill-color:white; text-align:center">&copy; 2024&nbsp;<a style="-webkit-text-fill-color:white; text-align:center" href="/Home/Index">Avukat Sermin Güneş Keçeci</a>, Tüm Hakları Saklıdır</p>
+                       
         </div>
   <style>
     .footer {
         background-color: #343a40;
-        color: white;
-        padding: 10px 0;        
-        owerflow:hidden;     
+        color: white;        
+        height:50px;
+        width:100%;      
+        text-align:center;
+        position:absolute;
+        align-items:center;
+        margin-top:100vh;
+       
     }
 
   </style>
