--- a/guneshukuk.WebUIv2/wwwroot/View/css/style.css
+++ b/guneshukuk.WebUIv2/wwwroot/View/css/style.css
@@ -4,11 +4,7 @@ html, body {
     padding: 0;
     font-family: "Open Sans", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 }
-body {
-    background-image: url('/View/images/hero_1.jpg');
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-attachment: fixed;
+
 }
   body:before {
     content: "";
@@ -44,10 +40,11 @@ a {
     text-decoration: none !important; }
 
 .hero {
-  height: 100%;
+  height:1600px;
   width: 100%;
   background-size: cover;
-  background-position: center center;
+  margin-bottom:0px;
+ 
   z-index:-1;
   }
 
